@@ -3,6 +3,7 @@
   * Add Object::new_instance_array method
   * Add autoloading and marshal class
   * Add Object::cloned and Object#dup
+  * Add Object#__clone
 
 2009-03-16 - Sean Huber (shuber@huberry.com)
   * Add Struct class
